# baha

./: .clang-format  .gitignore  BAHA_Presentation.pptx  CASE_STUDY.md  CEO.md  CHANGELOG.md  CITATION.bib  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  VC.md  build.sh  complexity.md  demo_baha_string.py  dna_benchmark  index.html  mis_benchmark  pyproject.toml  ramsey_benchmark  ramsey_cuda  sudoku_benchmark
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: adaptive_benchmark.py  auto_zeta_benchmark.py  benchmark.cpp  casimir_5sat.cpp  casimir_sat.cpp  chacha_benchmark.cpp  chaotic_benchmark.cpp  compare_sa.cpp  conference_scheduler.cpp  detailed_experiment.py  diagnostic.cpp  dna_barcode_benchmark.cpp  full_case_study_benchmark.py  graph_coloring_distribution.cpp  graph_iso_benchmark.cpp  graph_iso_benchmark_hard.cpp  hard_list_coloring.cpp  hard_phase_transition.py  hardness_barrier.cpp  jsp_benchmark.cpp  labs_benchmark.cpp  max_independent_set.cpp  mega_landscape_benchmark.cpp  milp_benchmark.cpp  mining_benchmark.cpp  omfg_benchmark.cpp  optimization_benchmark.cpp  ramsey_backend.h  ramsey_backend_cpu.cpp  ramsey_backend_cuda.cu  ramsey_backend_mps.mm  ramsey_benchmark.cpp  ramsey_common.h  ramsey_cuda.cpp  ramsey_cuda.cu  ramsey_cuda_main.cpp  ramsey_engine.cu  ramsey_engine.h  ramsey_kernel.cu  ramsey_metal.metal  (+16 more)
bindings/python/: pybaha.cpp  setup.py  test_pybaha.py
cmake/: baha-config.cmake.in
courses/: MASTERCLASS_SYLLABUS.md
data/: analyze_sat3_trace.py  baha_trace.csv  barcodes.fasta  protein_log.csv  ramsey_52_witness.csv  ramsey_55_witness.csv  ramsey_60_witness.csv  ramsey_65_witness.csv  sa_trace.csv  sat3_benchmark.csv  solution.adj  trace_partition.csv  trace_sat.csv  trace_tsp.csv  verify_ramsey.py
docs/: CASE_STUDY.md  NAVOKOJ.md  OPTIMIZATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  index.md
docs/business/: CEO.md  VC.md
docs/guides/: QUICKSTART.md  walkbro.md
docs/technical/: CASE_STUDY.md  OPTIMIZATION_GUIDE.md  PROBLEM_LIST.md  PROJECT_SUMMARY.md  QUANTUM.md  SPIN_GLASS.md  complexity.md
examples/: adafactor_meta_scheduler.cpp  adafactor_monster.cpp  adafactor_spin_glass.cpp  adaptive_spin_glass.cpp  adversarial_ml.cpp  baha_spin_glass.cpp  bin_packing.cpp  bin_packing.py  course_scheduling.cpp  cryptanalysis.py  cryptarithmetic.cpp  graph_coloring.cpp  hard_list_coloring.py  hybrid_monster.cpp  hybrid_solver.cpp  incident_response.cpp  isr_benchmarks.cpp  knapsack.cpp  list_coloring.cpp  list_coloring_networkx.py  max_clique.cpp  max_cut.cpp  n_queens.cpp  n_queens_100.py  network_design.cpp  physics_sat.py  prime_log_test.py  prime_test.py  ramsey_python.py  ramsey_python_delta.py  resource_allocation.cpp  run_physics_sat.py  scale_test.py  smart_grid_load_shedding.cpp  spectral_monster.cpp  spectrum_auction.cpp  test_adaptive_nqueens.py  test_auto_zeta.py  test_zeta_nqueens.py  traveling_salesman.cpp  (+3 more)
include/: baha.h  baha.hpp
include/baha/: baha.cuh  baha.hpp
scripts/: generate_case_study_visuals.py  visualize_graph_coloring.py  visualize_protein.py  visualize_ramsey.py
src/: baha.cpp  baha_cli.cpp  baha_gpu.cu
tests/: adafactor_meta_scheduler_test.cpp  cross_platform_test.cpp  ramsey_backend_test.cpp  simple_test.cpp  test_anytime.py  unit_tests.cpp
visualizations/: README.md  baha_dashboard.py  baha_vs_sa_race.py  baha_vs_sa_real.py  generate_advertisement.py  sat3_500vars_visualizer.py
