[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pybaha"
version = "1.0.0"
description = "Python bindings for BAHA (Branch-Aware Holonomy Annealing)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sethurathienam Iyer"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["optimization", "simulated-annealing", "combinatorial", "constraint-satisfaction"]

[project.urls]
Homepage = "https://github.com/sethuiyer/baha"
Repository = "https://github.com/sethuiyer/baha"
Documentation = "https://github.com/sethuiyer/baha/tree/main/docs"

[tool.setuptools]
# For C++ extensions, we need to define the extension modules directly
# This is handled by the setup.py in bindings/python, so we'll use that
py-modules = ["pybaha"]  # This tells setuptools to look for pybaha module

[tool.setuptools.package-data]
"*" = ["*.hpp", "*.h", "*.cuh"]

[tool.setuptools.cmdclass]
build_ext = "pybind11.setup_helpers.build_ext"
